Overflow Fix

--- a/src/components/Dashboard/Updates/updates.module.scss
+++ b/src/components/Dashboard/Updates/updates.module.scss
@@ -9,9 +9,8 @@
     display: flex;
     align-items: center;
     padding: 10px;
-    box-shadow: 0px 6px 16px -8px rgba(0, 0, 0, 0.08),
-      0px 9px 28px rgba(0, 0, 0, 0.05), 0px 12px 48px 16px rgba(0, 0, 0, 0.03);
-    float: right;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin: 5px;
     button {
       font-size: 1rem;
     }
@@ -21,13 +20,18 @@
       margin: 0 20px 0 5px;
     }
   }
+  .updates_list_container {
+    height: 0;
+    flex: 2;
+    overflow: auto;
+  }
   .updates_section_grid {
-    overflow-y: auto;
+    // overflow-y: auto;
+    height: fit-content;
     margin-top: 15px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 25px;
-    flex: 2;
   }
 }
 
